# darknet

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile
examples/: art.c  cifar.c  classifier.c  coco.c  darknet.c  detector.c  yolo.c
include/: darknet.h
python/: darknet.py
src/: activation_layer.c  activations.c  art.c  blas.c  cifar.c  classifier.c  coco.c  darknet.c  darknet.h  data.c  data.h  demo.c  demo.h  detector.c  image.c  image.h  lstm_layer.h  parser.c  parser.h  region_layer.c  round.c  round.h  utils.c  utils.h  yolo.c
